@@ -2,6 +2,10 @@ Cascading Change Log
 
 unreleased
 
+  Changed c.f.FlowStep behavior to run in 'local' mode if either the sink or source tap is a c.t.Lfs instance. This
+  allows for c.f.Flow instances to run mixed if configured to execute on a particular cluster by default. This behavior
+  supports complex import/export processes against the HDFS or other supported remote filesystem.
+
   Changed behavior of c.t.Dfs to force use of HDFS. Previously Dfs would defaul to the local FileSystem
   if the job was run in 'local'mode. Now a Dfs instance will cause failures if it cannot connect to a HDFS cluster.
   Using c.t.Hfs will provide previous Dfs behavior. Hfs will use the 'default' filesystem if a scheme is not present
